# bookstore-api-course

./: .env.example  .env.production  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  GITHUB_COMMANDS.md  GITHUB_REPOSITORY_SETUP.md  LICENSE  Makefile  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_RU.md  alembic.ini  create_data_via_api.py  create_test_data.py  docker-compose.prod.yml  docker-compose.yml  fastapi_requirements.txt  pyproject.toml  pytest.ini  requirements.in  run_bookstore.py  social-media-posts.md  testing_requirements.txt  ОБУЧЕНИЕ_README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  performance.yml
.kiro/specs/devops-production/: design.md  requirements.md  tasks.md
.kiro/specs/github-publication/: design.md  requirements.md  tasks.md
.kiro/specs/project-structure-cleanup/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 20260112_1753_f842a9486982_initial_migration_create_all_tables.py  20260112_1754_4ff7daf1f14f_add_phone_number_field_to_users_table.py
bookstore/: __init__.py  auth.py  config.py  database.py  logging_config.py  main.py  middleware.py  models.py  schemas.py
bookstore/routers/: authors.py  books.py  genres.py  reading_lists.py  reviews.py  users.py
deployment/: README.md
deployment/docker/: docker-compose.prod.yml
deployment/k8s/: configmap.yaml  deploy.sh  redis.yaml
deployment/monitoring/dashboards/: dashboard.yml
deployment/monitoring/datasources/: prometheus.yml
development/: README.md
development/scripts/: migrate.py  validate-project.ps1  validate-simple.ps1
docs/: CI_CD_SETUP.md  DEVOPS_PROGRESS.md  DOCKER_SETUP.md  DOCKER_И_DEVOPS_РУКОВОДСТВО.md  PROJECT_STRUCTURE.md  TESTING_SUMMARY.md  БЫСТРЫЙ_СТАРТ.md  ОБУЧАЮЩИЕ_МАТЕРИАЛЫ.md  РУКОВОДСТВО_ПО_ТЕСТИРОВАНИЮ.md  СТРУКТУРА_ПРОЕКТА.md
documentation/: README.md
documentation/guides/: DATABASE_MIGRATIONS.md  GITHUB_SETUP.md  PRODUCTION_DEPLOYMENT.md
examples/: decorators_advanced.py  decorators_typehints_cheatsheet.md  fastapi_cheatsheet.md  oop_cheatsheet.md  oop_practice.py  task_system.py  testing_cheatsheet.md  type_hints_advanced.py
grafana/dashboards/: bookstore-api.json
k8s/: api-deployment.yaml  ingress.yaml  monitoring.yaml  namespace.yaml  postgresql.yaml  secrets.yaml
requirements/: README.md  api.in  api.txt  base.txt  testing.in
tests/: __init__.py  conftest.py  factories.py  locustfile.py  test_api_integration.py  test_performance.py  test_property_based.py  test_unit_basic.py
